--- a/Readme
+++ b/Readme
@@ -1,4 +1,4 @@
-<h1>MED SOCIAL</h1>
+#MED SOCIAL#
 We people from Rojava want to create a social network for Rojava.
 
 Here is the entire source code from the Rojava Social Network.
